# object-detector-image-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  docker-compose.yml  docker-entrypoint.sh  docker-sync.yml  sssMakefile
src/: brisk-detector.cpp  helloword.cpp  helloword.xcpp  helloword.xzcpp  main.cpp  orb-detector.cpp  utils.h
